# XR-FreeD_to_UDP

./: .gitignore  MANUAL.md  README.md  platformio.ini  server.toml
Example/: UDP송신_간단.py  UDP수신_간단.py  freed251221.py
dashboard/: .gitignore  README.md  pyproject.toml  server.toml
dashboard/backend/: app.py  config.py  lifecycle.py  protocol.py  requirements.txt  state.py  udp_bridge.py
dashboard/backend/tests/: conftest.py  test_app.py  test_bridge.py  test_protocol.py  test_state.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.svelte  app.css  stores.js
dashboard/frontend/src/lib/: EventLog.svelte  RateChart.svelte  StatusBar.svelte  TargetCard.svelte  ThemeToggle.svelte  api.js
dashboard/setup/: firewall.ps1  firewall.sh  install.ps1  install.sh  run.ps1  run.sh  xr-freed-to-udp.service
docs/superpowers/plans/: 2026-06-16-xrfd-dashboard-svelte-migration.md
docs/superpowers/specs/: 2026-06-16-xrfd-dashboard-svelte-migration-design.md
src/: main.cpp  main.cpp.v15.backup
tools/: xrfd_ctl.bat  xrfd_ctl.ps1  xrfd_ctl.sh  xrfd_dashboard.bat  xrfd_dashboard.ps1  xrfd_dashboard.py  xrfd_dashboard.sh  xrfd_firewall_setup.bat  xrfd_firewall_setup.sh  xrfd_monitor.bat  xrfd_monitor.ps1  xrfd_monitor.sh  xrfd_send.bat  xrfd_shell.bat  xrfd_shell.ps1  xrfd_status.bat  xrfd_target1_off.bat  xrfd_target1_on.bat
